# QCQPsolver

./: CMakeLists.txt  README.md
QCQPsolver/: CMakeLists.txt  README.md
QCQPsolver/problemdata/: A_matrix.csv  B_matrices.csv
QCQPsolver/src/: qcqp.cpp
problemdata/: A_matrix.csv  B_matrices.csv
src/: qcqp.cpp
